--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="tag">Vagas abertas!</div>
         <h3>Estamos procurando por talentos</h3>
         <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-        <img src="/assets/images/team.png" alt="">
+        <img src="assets/images/team.png" alt="">
 
         <div class="cards_list">
             <div class="area_title">Design</div>
